API Auth enabled

--- a/Charcoal/charcoal.conf
+++ b/Charcoal/charcoal.conf
@@ -19,15 +19,18 @@ default_view HTML
 
 <Plugin::Authentication>
     <default>
+
         <credential>
             password_type   clear
             password_field  password
             class           Password
         </credential>
+
         <store>
             class       DBIx::Class
             user_model  PgDB::User
         </store>
+
     </default>
 </Plugin::Authentication>
 
@@ -39,12 +42,17 @@ default_view HTML
     </backend>
 </Plugin::Cache>
 
-#<Plugin::Session::Store::Memcached::Fast>
-#    <session>
-#        expires 3600
-#        servers ['127.0.0.1:11211']
-#    </session>
-#</Plugin::Session::Store::Memcached::Fast>
+<Plugin::Session::Store::Memcached::Fast>
+    <session>
+        expires 3600
+        servers ['127.0.0.1:11211']
+    </session>
+</Plugin::Session::Store::Memcached::Fast>
+
+<Plugin::Session>
+	auth_header	X-Charcoal-Auth
+	allowed_uri	^/api/
+</Plugin::Session>
 
 <Plugin::Static::Simple>
     dirs ['static']
