User profile modification added

--- a/Charcoal/charcoal.conf
+++ b/Charcoal/charcoal.conf
@@ -21,9 +21,9 @@ default_view HTML
     <default>
 
         <credential>
-            password_type   clear
-            password_field  password
-            class           Password
+            password_type   self_check
+#            password_field  password
+#            class           Password
         </credential>
 
         <store>
