User self-management

--- a/Charcoal/charcoal.conf
+++ b/Charcoal/charcoal.conf
@@ -5,9 +5,9 @@ name Charcoal
 default_view HTML
 
 <Model::PgDB>
-    connect_info    dbi:Pg:dbname=charcoaldb;host=10.28.254.5;port=5432
-    connect_info    charcoal
-    connect_info    charcoa1pa55
+    connect_info    dbi:Pg:dbname=charcoaldb;host=127.0.0.1;port=5432
+    connect_info    charcoaluser
+    connect_info    charcoalpasswd
     <connect_info>
         AutoCommit 1
     </connect_info>
@@ -17,13 +17,15 @@ default_view HTML
     expose_stash = json
 </View::JSON>
 
+<View::HTML>
+	debug	all
+</View::HTML>
+
 <Plugin::Authentication>
     <default>
 
         <credential>
             password_type   self_check
-#            password_field  password
-#            class           Password
         </credential>
 
         <store>
@@ -57,3 +59,24 @@ default_view HTML
 <Plugin::Static::Simple>
     dirs ['static']
 </Plugin::Static::Simple>
+
+<View::Email::Template>
+	stash_key	email
+	<default>
+		view			HTML
+		content_type	text/plain
+#		content_type	multipart/alternative
+		charset			utf-8
+		encoding		quoted-printable
+	</default>
+	<sender>
+		mailer	SMTP
+		<mailer_args>
+			host	my.smtp.host
+		</mailer_args>
+	</sender>
+</View::Email::Template>
+
+<Controller::User::Register>
+	jwt_key	my_secret
+</Controller::User::Register>
